2011-08-12  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* release 0.6.0:

	- Big improvement to itk_imfilter(). Before, we were creating an
	itk::Image for the input, and copying there the Matlab input
	buffer. Also, copying the filter outputs to Matlab output
	buffers. But now, we graft the Matlab buffers directly into the
	filter, so no copying is necessary. This saves time, and also
	memory, as no duplicates of the input and outputs are performed.

	In the case of some outputs, copying may be necessary. For
	example, if the filter gives an extra output where each voxel is a
	vector. We cannot return that directly, so we need to process that
	output and copy the result to a Matlab buffer.

	* ItkToolbox/ItkImFilter.cpp (v0.5.1):

	- Fix bug. Filter pointer was being passed by value instead of
	reference, so FilterSelector was instantiating the filter class,
	but then the memory address was not being written to the pointer,
	so runFilter() only saw a NULL pointer, that caused a segfault in
	filter->CheckNumberOfOutputs();

	* ItkToolbox/MexBaseFilter.cpp (v0.5.1):

	- Remove some debug messages that I had forgotten.

	* ItkToolbox/ItkImFilter.cpp (v0.5.0):

	- Big rewrite. Before, we instantiate all input/output voxel type
	combinations for each filter, and the specializing with
	EXCLUDEFILTER() to have empty class definitions for those
	combinations that are not supported.

	Now, we only instantiate those filter/input/output combinations
	that are supported. This is a much better approach.

	Now we use an INVALIDINPUTTYPE() macro to give an error when a
	particular filter doesn't support an input voxel type. This is
	something that was missing from the previous release.

	- Create an enum to have a list of supported filters. Then, we can
	pass those values as template parameters. This allows us to
	compile only those filter/input/output combinations that are
	supported. We only need to check the filter string name once with